--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,6 @@
 {
   "menu": {
+    "portfolio": "portfolio",
     "about": "about",
     "experience": "experience",
     "education": "education",
