--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,5 +1,6 @@
 {
   "menu": {
+    "portfolio": "Портфолио",
     "about": "Обо мне",
     "experience": "Опыт работы",
     "education": "Образование",
