--- a/lang/ru.json
+++ b/lang/ru.json
@@ -8,8 +8,10 @@
     "interests": "Интересы"
   },
   "about": {
-    "name": "Ярослав <span>Cалыга</span>",
+    "name": "Ярослав",
+    "surname": "Cалыга",
     "location": "Украина · Краматорск",
-    "mail": "salyga.yaroslav@gmail.com"
+    "mail": "salyga.yaroslav@gmail.com",
+    "information": "Я являюсь разработчиком с опытом работы более 6 лет. Умею делать всё необходимое для качественной работы с front-end. Постоянно развиваюсь и изучаю новые стандарты и фреймворки. Быстро разбираюсь в коде любой сложности. Аналитический склад ума и нестандартное мышление наряду с креативностью помогает видеть разные пути решения задач. Есть понимание эстетики дизайна и юзабилити интерфейса."
   }
 }
