--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,4 +1,5 @@
 {
+  "title": "Портфолио программиста",
   "menu": {
     "portfolio": "Портфолио",
     "about": "Обо мне",
@@ -13,5 +14,12 @@
     "location": "Украина · Краматорск",
     "mail": "salyga.yaroslav@gmail.com",
     "information": "Я являюсь разработчиком с опытом работы более 6 лет. Умею делать всё необходимое для качественной работы с front-end. Постоянно развиваюсь и изучаю новые стандарты и фреймворки. Быстро разбираюсь в коде любой сложности. Аналитический склад ума и нестандартное мышление наряду с креативностью помогает видеть разные пути решения задач. Есть понимание эстетики дизайна и юзабилити интерфейса."
+  },
+  "experience": {
+    "title": "Опыт работы",
+    "it20": "Большую часть времени я разрабатывал JS приложение, переодически переключаясь на срочные PHP проекты или разработку плагинов для них. Тут я познакомился с большей частью PHP и JS фреймворков (Zend, Laravel, WordPress, Yii, Bootstrap, Vue и другие). С 2016-го года по текущее время являюсь тимлидом команды front-end разработчиков.",
+    "it20-time": "Апрель 2012 - Текущее время",
+    "qs": "На этом месте работы я прошел качественное обучение по PHP, MySql, JS на базе Yii-framework. Научился использовать ООП и разрабатывать свои jQuery плагины. Участвовал в разработке небольшого проекта онлайн продуктового магазина на конкурсной основе.",
+    "qs-time": "Октябрь 2011 - Февраль 2012"
   }
 }
