--- a/lang/ru.json
+++ b/lang/ru.json
@@ -17,12 +17,21 @@
   },
   "experience": {
     "title": "Опыт работы",
-    "it20": "Большую часть времени я разрабатывал JS приложение, переодически переключаясь на срочные PHP проекты или разработку плагинов для них. Тут я познакомился с большей частью PHP и JS фреймворков (Zend, Laravel, WordPress, Yii, Bootstrap, Vue и другие). С 2016-го года по текущее время являюсь тимлидом команды front-end разработчиков.",
+    "it20": "Большую часть времени я разрабатывал JS приложение, переодически переключаясь на срочные PHP проекты или разработку плагинов для них. Тут я познакомился с большей частью PHP и JS фреймворков (Zend, Laravel, WordPress, Yii, Bootstrap, Vue и другие). С 2016-го года являюсь тимлидом команды front-end разработчиков. Постоянно участвую в разработке ТЗ и дизайна для проектов.",
     "it20-time": "Апрель 2012 - Текущее время",
     "qs": "Начало работы пришло на 5-й курс обучения в институте. Тут я прошел качественное обучение по PHP, MySql, JS на базе Yii-framework. Научился использовать ООП и разрабатывать свои jQuery плагины. Участвовал в разработке небольшого проекта онлайн продуктового магазина на конкурсной основе.",
     "qs-time": "Октябрь 2011 - Февраль 2012",
     "mevs-pos": "Сотрудник сервисного центра",
     "mevs": "В сервисном центре я научился собирать и ремонтировать ПК, ноутбуки и перефирию. Навыки установки ПО и настройки сети позволила мне удачно использовать их на любом месте работы.",
     "mevs-time": "Август 2010 - Май 2011"
+  },
+  "education": {
+    "title": "Образование",
+    "dmt": "ДТ ДГМА",
+    "dmt-special": "Инженер програмного обеспечения",
+    "dmt-time": "Февраль 2009",
+    "dgma": "ДГМА",
+    "dgma-special": "Специалист-инженер информационных технологий проектирования",
+    "dgma-time": "Февраль 2012"
   }
 }
