--- a/lang/en.json
+++ b/lang/en.json
@@ -33,5 +33,20 @@
     "dgma": "DGMA",
     "dgma-special": "Specialist-engineer of information technologies of designing",
     "dgma-time": "February 2012"
+  },
+  "skills": {
+    "title": "Skills",
+    "languages": "Languages",
+    "tools": "Tools",
+    "frameworks": "Frameworks",
+    "workflow": "Workflow",
+    "first": "Mobile-First, Responsive Design",
+    "second": "Cross Browser Testing & Debugging",
+    "third": "Agile Development & Scrum",
+    "four": "Cross Functional Teams"
+  },
+  "interests": {
+    "title": "Interests",
+    "text": "In addition to front-end development, I spend a lot of time on active recreation and personal development. <br> I really love fishing, and I try to go to it at every opportunity. In addition to fishing, I often play football on an amateur level. <br> If the weather does not allow you to relax actively, then I can play computer games or spend time with an art book. I also try to participate in social projects aimed at helping those in need or simply improving the city. <br> Often I help my wife with work (graphic design). I like to spend time in a friendly atmosphere communicating on any topic."
   }
 }
