--- a/lang/ru.json
+++ b/lang/ru.json
@@ -40,9 +40,13 @@
     "tools": "Инструменты",
     "frameworks": "Фреймворки",
     "workflow": "Рабочий процесс",
-    "first": "Mobile-First, Responsive Design",
-    "second": "Cross Browser Testing & Debugging",
-    "third": "Cross Functional Teams",
-    "four": "Agile Development & Scrum"
+    "first": "Мобильная, отзывчивая верстка",
+    "second": "Кроссбраузерное тестирование и отладка",
+    "third": "Гибкие методы разработки",
+    "four": "Многофункциональная работа в команде"
+  },
+  "interests": {
+    "title": "Интересы",
+    "text": "Кроме front-end разработки, я уделяю много времени активному отдыху и личному развитию. <br> Я очень люблю рыбалку, и стараюсь выезжать на нее при каждой возможности. Кроме рыбалки я часто играю в футбол на любительском уровне. <br>Если погода не позволяет отдохнуть активно, то могу поиграть в компьютерные игры или провести время за художественной книгой.<br> Так же стараюсь участвовать в социальных проектах, направленных на помощь нуждающимся или просто улучшению города. <br> Часто помогаю свой жене с работой (графический дизайн). Очень люблю проводить время в дружеской обстановке общаясь на любые темы."
   }
 }
