--- a/lang/ru.json
+++ b/lang/ru.json
@@ -6,7 +6,8 @@
     "experience": "Опыт работы",
     "education": "Образование",
     "skills": "Навыки",
-    "interests": "Интересы"
+    "interests": "Интересы",
+    "certifications": "Сертификаты"
   },
   "about": {
     "name": "Ярослав",
@@ -43,10 +44,19 @@
     "first": "Мобильная, отзывчивая верстка",
     "second": "Кроссбраузерное тестирование и отладка",
     "third": "Гибкие методы разработки",
-    "four": "Многофункциональная работа в команде"
+    "four": "Многофункциональная работа в команде",
+    "five": "Работа с API (Oauth, Google, Yandex, Twitch, Steam и другие)",
+    "six": "Работа с чатами (Jabber, XMPP) и телефонией (SIP, WebRTC)"
   },
   "interests": {
     "title": "Интересы",
     "text": "Кроме front-end разработки, я уделяю много времени активному отдыху и личному развитию. <br> Я очень люблю рыбалку, и стараюсь выезжать на нее при каждой возможности. Кроме рыбалки я часто играю в футбол на любительском уровне. <br>Если погода не позволяет отдохнуть активно, то могу поиграть в компьютерные игры или провести время за художественной книгой.<br> Так же стараюсь участвовать в социальных проектах, направленных на помощь нуждающимся или просто улучшению города. <br> Часто помогаю свой жене с работой (графический дизайн). Очень люблю проводить время в дружеской обстановке общаясь на любые темы."
+  },
+  "certifications": {
+    "title": "Сертификаты",
+    "first": "Лидерский тренинг (Севастополь)",
+    "second": "UX Designer",
+    "third": "Elementary English (English 4U)",
+    "more": "и другие..."
   }
 }
