--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
-  "title": "Programmer's Portfolio",
+  "title": "Programmer's Resume",
   "menu": {
-    "portfolio": "portfolio",
+    "portfolio": "resume",
     "about": "about",
     "experience": "experience",
     "education": "education",
