--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,7 +1,7 @@
 {
-  "title": "Портфолио программиста",
+  "title": "Резюме программиста",
   "menu": {
-    "portfolio": "Портфолио",
+    "portfolio": "Резюме",
     "about": "Обо мне",
     "experience": "Опыт работы",
     "education": "Образование",
