--- a/lang/en.json
+++ b/lang/en.json
@@ -54,9 +54,9 @@
   },
   "certifications": {
     "title": "Certifications",
-    "first": "Leadership training (Sevastopol)",
-    "second": "UX Designer",
-    "third": "Elementary English (English 4U)",
+    "first": "Interactive training of personal effectiveness (Sevastopol)",
+    "third": "UX Designer",
+    "four": "Elementary English (English 4U)",
     "more": "and others ..."
   }
 }
