--- a/lang/ru.json
+++ b/lang/ru.json
@@ -54,9 +54,9 @@
   },
   "certifications": {
     "title": "Сертификаты",
-    "first": "Лидерский тренинг (Севастополь)",
-    "second": "UX Designer",
-    "third": "Elementary English (English 4U)",
+    "first": "Интерактивный тренинг персональной эффективности (г. Севастополь)",
+    "third": "UX Designer",
+    "four": "Elementary English (English 4U)",
     "more": "и другие..."
   }
 }
